--- a/wm_decay.ipynb
+++ b/wm_decay.ipynb
@@ -17,6 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install required packages\n",
+    "!pip install pandas numpy matplotlib seaborn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
