--- a/hicks_law.ipynb
+++ b/hicks_law.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Load the data\n",
     "# Replace 'your_results.csv' with your actual filename\n",
-    "df = pd.read_csv('your_results.csv')\n",
+    "df = pd.read_csv('times.csv')\n",
     "\n",
     "# Display the first few rows\n",
     "print(\"First few rows of your data:\")\n",
